tests/ui/async-await/in-trait/object-safety.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/object-safety.rs:10:12
   |
LL |     let x: &dyn Foo = todo!();
   |            ^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety.rs:6:14
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     async fn foo(&self);
   |              ^^^ ...because method `foo` is `async`
   = help: consider moving `foo` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
